changelog for Path::Class::File removal
e.g. see http://www.cpantesters.org/cpan/report/846424be-20de-11e3-8834-80bba0a565e3

--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@ Revision history for {{$dist->name}}
   - repository migrated from shadowcat to the github moose organization
   - eliminate race conditions between tests by using separate tempdirs for
     config files
+  - resolve failing test report by removing unnecessary and undeclared prereq
 
 0.09      2010-08-15
   - Fix issue with MANIFEST
