--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - remove optional test prereq by testing .pl config files, rather than .conf
 
 0.10      2013-11-13 01:13:05Z
   - repository migrated from shadowcat to the github moose organization
